CHANGE: header__container background color

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <h1 class="fw__bold tt__uppercase">The Best Care for Your Little One</h1>
             <p>Dachshund tail release boxer pomksy dog house, chew toy heel chow chow squeak toy. St bernard shake shih tzu leave it husky.</p>
             <button class="fw__bold tt__uppercase">Schedule</button>
-            <img src="images/puppy-hero-bg.jpg" alt="" />
+            <div class="">
+            <img src="images/puppy-hero-bg.jpg" alt="" width="400" height="500"/>
+            </div>
           </div>
         </section>
       </header>
