Playing around with images in grid

--- a/index.html
+++ b/index.html
@@ -51,26 +51,31 @@
         <div class="container">
           <div class="shop__grid">
             <div id="dogs">
+              <img src="images/dogs.jpg" alt="" />
               <h2>Dogs</h2>
               <p>This is the title....</p>
               <button>Shop Now</button>
             </div>
             <div id="cats">
+              <img src="images/cats.jpg" alt="" />
               <h2>Cats</h2>
               <p>This is the title....</p>
               <button>Shop Now</button>
             </div>
             <div id="birds">
+              <img src="images/birds.jpg" alt="" />
               <h2>Birds</h2>
               <p>This is the title....</p>
               <button>Shop Now</button>
             </div>
             <div id="fish">
+              <img src="images/fish.jpg" alt="" />
               <h2>Fish</h2>
               <p>This is the title....</p>
               <button>Shop Now</button>
             </div>
             <div id="reptiles">
+              <img src="images/reptiles.jpg" alt="" />
               <h2>Reptiles</h2>
               <p>This is the title....</p>
               <button>Shop Now</button>
